# clustur

./: .Rbuildignore  .gitignore  .lintr  404.html  CMakeLists.txt  CountTable.txt  DESCRIPTION  LICENSE-text.html  LICENSE.html  LICENSE.md  NAMESPACE  NEWS.md  NameFile.txt  README.Rmd  README.md  SharedFile.txt  SharedFile_tidy.txt  _pkgdown.yml  amazon  authors.html  cluster_furthest.txt  count_table.count  count_table.full.count_table  count_table_sample.count_table  cran-comments.md  data  esophagus.count_table  esophagus.dist  exported_cluster_data.txt  feature_table_ms2.csv  index.html  modifed_amazon.csv  output_matrix_phylip.txt  output_matrix_phylip1.txt  output_rabund.txt  pkgdown.yml  profile.out  profile_classic_cluster.out  random  search.json  (+3 more)
.github/workflows/: check-full.yml  lintr.yml
R/: Cluster.R  RcppExports.R  catch-routine-registration.R  cluster.R  cluster_data_converters.R  cluster_object-getters.R  clustur-package.R  clustur_info.R  distance_object-getters.R
articles/: Using-clustur.html  clustur.html  index.html
articles/articles/: Using-clustur.html
inst/extdata/: count_table.RDS
man/: OptiCluster.Rd  Opticluster-package.Rd  cluster.Rd  clusterPhylip.Rd  clustur-package.Rd  clustur.Rd  convert_distance_file_to_sparse.Rd  create_sparse_matrix.Rd  example_path.Rd  get_abundance.Rd  get_bins.Rd  get_clusters.Rd  get_count_table.Rd  get_cutoff.Rd  get_distance_data_frame.Rd  get_label.Rd  get_metrics.Rd  get_shared.Rd  opti_cluster.Rd  opti_cluster_phylip.Rd  read_count.Rd  read_dist.Rd  split_clusters_to_list.Rd  validate_count_table.Rd
mothur_outputs/: Phylip_file.an.list  Phylip_file.an.rabund  Phylip_file.an.sabund  Phylip_file.fn.list  Phylip_file.opti_mcc.list  Phylip_file.opti_mcc.sensspec  Phylip_file.opti_mcc.steps  Phylip_file.pick.txt  clust_fur.txt
news/: index.html
reference/: cluster.html  clustur-package.html  clustur.html  create_sparse_matrix.html  example_path.html  get_abundance.html  get_bins.html  get_clusters.html  get_count_table.html  get_cutoff.html  get_distance_data_frame.html  get_distance_df.html  get_metrics.html  get_shared.html  index.html  opti_cluster.html  read_count.html  read_dist.html  split_clusters_to_list.html  validate_count_table.html
src/: AverageLinkage.cpp  Cluster.cpp  ClusterCommand.cpp  ClusterCommandTestFixture.cpp  ClusterData.cpp  ClusterExportTestFixture.cpp  Clustercommand.cpp  ColumnDistanceMatrixReader.cpp  ColumnReaderTestFixture.cpp  CompleteLinkage.cpp  CountTableAdapter.cpp  CountTableAdapterTestFixture.cpp  DistanceFileReader.cpp  DistanceFilesToSparse.cpp  ListVector.cpp  ListVectorTestFixture.cpp  Makevars  MatrixAdapter.cpp  MatrixAdapterTestFixture.cpp  OptiCluster.cpp  OptiClusterTestFixture.cpp  OptiData.cpp  OptiDataTestFixture.cpp  OpticlusterData.cpp  OptimatrixAdapter.cpp  OptimatrixAdapterTestFixture.cpp  PhylipReaderTestFixture.cpp  RAbundVector.cpp  RAbundVectorTestFixture.cpp  RcppExports.cpp  ReadPhylipMatrix.cpp  RowData.h  SharedFile.cpp  SharedFileBuilder.cpp  SharedFileBuilderTestFixture.cpp  SingleLinkage.cpp  SparseDistanceMatrix.cpp  SparseMatrixTestFixture.cpp  TestHelper.cpp  Utils.cpp  (+23 more)
src/Adapters/: CountTableAdapter.h  DistanceFileReader.h  DistanceFilesToSparse.h  MatrixAdapter.cpp  MatrixAdapter.h  OptimatrixAdapter.h
src/MothurDependencies/: AverageLinkage.cpp  AverageLinkage.h  Cluster.cpp  Cluster.h  ClusterCommand.h  ClusterData.cpp  ClusterData.h  ClusterExport.h  ClusterResult.cpp  ClusterResult.h  Clustercommand.h  ColumnDistanceMatrixReader.cpp  ColumnDistanceMatrixReader.h  CompleteLinkage.cpp  CompleteLinkage.h  CountTable.cpp  CountTable.h  DataVector.h  ListVector.h  OptiCluster.h  OptiData.h  OptiMatrix.h  OpticlusterData.h  PDistCell.h  (+16 more)
tests/: column.fn.list  column.opti_mcc.list  column.opti_mcc.sensspec  column.opti_mcc.steps  matrix_output.txt  output.an.list  output.an.rabund  output.an.sabund  output.txt  output_3.txt  output_5.nn.list  output_5.nn.rabund  output_5.nn.sabund  output_5.txt  output_6.txt  output_7.txt  testthat.R
vignettes/: About-clustur.Rmd  Additional_Analysis.Rmd  Using-clustur.Rmd  clustur.Rmd
(+70 files in other folders)
