cmake_minimum_required(VERSION 3.28)
project(muMS2_Clustering)
include_directories("C:\\Users\\gregj\\Downloads\\boost_1_85_0_rc3\\boost_1_85_0")
set(CMAKE_CXX_STANDARD 11)

add_executable(muMS2_Clustering src/main.cpp
        src/Adapters/OptimatrixAdapter.h
        src/OptimatrixAdapter.cpp
        src/OptiMatrix.cpp
        src/MothurDependencies/OptiMatrix.h
        src/clustercommand.cpp
        src/MothurDependencies/clustercommand.h
        src/Utils.cpp
        src/MothurDependencies/Utils.h
        src/OptiData.cpp
        src/MothurDependencies/OptiData.h
        src/OptiCluster.cpp
        src/MothurDependencies/OptiCluster.h
        src/ListVector.cpp
        src/MothurDependencies/ListVector.h
        src/MothurDependencies/ClusterMetric.cpp
        src/MothurDependencies/ClusterMetric.h
        src/MothurDependencies/Metrics/accuracy.hpp
        src/MothurDependencies/Metrics/fn.hpp
        src/MothurDependencies/Metrics/fpfn.hpp
        src/MothurDependencies/Metrics/specificity.hpp
        src/MothurDependencies/Metrics/sensitivity.hpp
        src/MothurDependencies/Metrics/fp.hpp
        src/MothurDependencies/Metrics/tptn.hpp
        src/MothurDependencies/Metrics/tp.hpp
        src/MothurDependencies/Metrics/ppv.hpp
        src/MothurDependencies/Metrics/f1score.hpp
        src/MothurDependencies/Metrics/mcc.hpp
        src/MothurDependencies/Metrics/fdr.hpp
        src/MothurDependencies/Metrics/npv.hpp
        src/MothurDependencies/Metrics/tn.hpp
        src/TestHelpers/TestHelper.h
        src/Tests/TestFixture.h
        src/OptimatrixAdapterTestFixture.cpp
        src/Tests/OptimatrixAdapterTestFixture.h
        src/UtilsTestFixture.cpp
        src/OptiDataTestFixture.cpp
        src/ListVectorTestFixture.cpp
        src/Tests/ClusterCommandTestFixture.h
        src/Tests/OptiDataTestFixture.h
        src/Tests/ListVectorTestFixture.h
        src/Tests/OptiClusterTestFixture.h
        src/Tests/UtilsTestFixture.h
        src/MothurDependencies/AverageLinkage.h
        src/MothurDependencies/Cluster.h
        src/MothurDependencies/ClusterCommand.h
        src/MothurDependencies/ClusterMetric.h
        src/MothurDependencies/CompleteLinkage.h
        src/MothurDependencies/DataVector.h
        src/MothurDependencies/ListVector.h
        src/MothurDependencies/OptiCluster.h
        src/MothurDependencies/OptiData.h
        src/MothurDependencies/OptiMatrix.h
        src/MothurDependencies/PDistCell.h
        src/MothurDependencies/RAbundVector.h
        src/MothurDependencies/SingleLinkage.h
        src/MothurDependencies/SparseDistanceMatrix.h
        src/MothurDependencies/Utils.h
        src/MothurDependencies/WeightedLinkage.h
        src/CompleteLinkage.cpp
        src/Cluster.cpp
        src/RAbundVector.cpp
        src/WeightedLinkage.cpp
        src/OptiClusterTestFixture.cpp
        src/SingleLinkage.cpp
        src/CompleteLinkage.cpp
        src/AverageLinkage.cpp
        src/ReadPhylipMatrix.cpp
        src/SparseDistanceMatrix.cpp
        src/RowData.h
        src/ClusterCommandTestFixture.cpp
        src/AverageLinkage.cpp
        src/AverageLinkage.cpp
        src/Adapters/MatrixAdapter.h
        src/MatrixAdapter.cpp
        src/TestHelper.cpp
        src/ClusterTestFixture.cpp
        src/Tests/ClusterTestFixture.h
        src/PhylipReaderTestFixture.cpp
        src/Tests/PhylipReaderTestFixture.h
        src/SparseMatrixTestFixture.cpp
        src/Tests/SparseMatrixTestFixture.h
        src/MothurDependencies/ReadPhylipMatrix.h
        src/MothurDependencies/RSparseMatrix.h
        src/MothurDependencies/SharedFile.h
        src/MothurDependencies/SharedFileBuilder.h
        src/MothurDependencies/OtuAbundancePair.h
        src/MothurDependencies/ClusterData.h
        src/SharedFileBuilder.cpp
        src/SharedFile.cpp
        src/MothurDependencies/ClusterResult.h
        src/MothurDependencies/ClusterResult.cpp
        src/MothurDependencies/ClusterExport.h
        src/MothurDependencies/ClusterData.cpp
)
